$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- Update build scripts and patches for FreeBSD 8.3 and bump version to 1.8.1
  to reflect this relatively major change.

- Fix "Modem" appearing as gateway for Ethernet interfaces on status page.

- Add support in snmpd for hrSystemUptime

- Fix Checkin (include files :)

- Initial support for USB modems

- Patch fxp driver to disable checksumming for 82559 chipsets and em driver for nokia firewalls (force load)

- hide IPv6 addresses on interface status page when IPv6 is disabled
  (to prevent confusion)

- use csup instead of cvsup

- use cvsup to make sure port tree is compatible with patches

- update ISC patch for dnsmasq 2.60

- add possibility to modify wpa_group_rekey value
  (via config only: wlans -> wlan -> wpa -> grouprekey = interval in seconds)

- fix scheduler ignore empty array jobset

- fix scheduler delete jobset if no defined job left

- move scheduler functions in services.inc to new include scheduler.inc
- scheduler jobs will now be updated if their targets have been modified

- fix version of config.xml
- minor tweaks of croen daemon

- rewrite croen daemon (scheduler) from scratch to handle more than one job at a time
  and do considerably less php calls
- delete obsolete job Enable/Disable WLAN
- disable undo feature for jobs
- add custom description for jobs
- add job Interface: Enable/Disable
  if all wlan child interfaces of a parent interface have been disabled the parent
  interface will also be brought down to save power
- add job Traffic Shaper: Enable/Disable
- add job Traffic Shaper: Enable/Disable rule
- add job Traffic Shaper: Set pipe bandwidth of a pipe
- add job Traffic Shaper: Set queue weight of a queue
- add job Execute command

- fix incorrect handling of UDP packets with zero checksum when hardware checksumming